# githubactions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-test.yml  deploy.yml
app/: __init__.py  main.py
scripts/: deploy.py
tests/: conftest.py  test_main.py
